[package]
name = "playground"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy_prng = { version = "0.9.0", features = ["wyrand"] }
bevy_rand = { version = "0.9.0", features = ["wyrand"] }
goap-ai = "0.2.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
